# tick-rs

./: .gitignore  Cargo.toml  README.md
assets/: Tick.icns
src/: main.rs
